syntax = "proto3";

package reference_data;

option go_package = "github.com/fynnwu/FinancialTrading/go-api/reference-data;reference_data";

import "google/protobuf/timestamp.proto";

// ReferenceDataService 提供参考数据管理服务
service ReferenceDataService {
  // 获取交易对信息
  rpc GetSymbol (GetSymbolRequest) returns (GetSymbolResponse);
  // 列出所有交易对
  rpc ListSymbols (ListSymbolsRequest) returns (ListSymbolsResponse);
  
  // 获取交易所信息
  rpc GetExchange (GetExchangeRequest) returns (GetExchangeResponse);
  // 列出所有交易所
  rpc ListExchanges (ListExchangesRequest) returns (ListExchangesResponse);
}

// 交易对信息
message Symbol {
  string id = 1; // 唯一标识
  string base_currency = 2; // base货币
  string quote_currency = 3; // quote货币
  string exchange_id = 4; // 交易所ID
  string symbol_code = 5; // 交易对代码
  string status = 6; // 状态
  double min_order_size = 7; // 最小订单大小
  double price_precision = 8; // 价格precision
  google.protobuf.Timestamp created_at = 9; // 创建时间
  google.protobuf.Timestamp updated_at = 10; // 更新时间
}

// 交易所信息
message Exchange {
  string id = 1; // 唯一标识
  string name = 2; // 名称
  string country = 3; // 国家
  string status = 4; // 状态
  string timezone = 5; // 时区
  google.protobuf.Timestamp created_at = 6; // 创建时间
  google.protobuf.Timestamp updated_at = 7; // 更新时间
}

// 获取交易对请求
message GetSymbolRequest {
  string id = 1; // 唯一标识
  string symbol_code = 2; // 交易对符号
}

// 获取交易对响应
message GetSymbolResponse {
  Symbol symbol = 1; // 交易对符号
}

// 列出交易对请求
message ListSymbolsRequest {
  string exchange_id = 1; // 交易所ID
  string status = 2; // 状态
  int32 page_size = 3; // 页码大小
  string page_token = 4; // 页码令牌
}

// 列出交易对响应
message ListSymbolsResponse {
  repeated Symbol symbols = 1; // 交易对符号
  string next_page_token = 2; // 下一个页码令牌
}

// 获取交易所请求
message GetExchangeRequest {
  string id = 1; // 唯一标识
  string name = 2; // 名称
}

// 获取交易所响应
message GetExchangeResponse {
  Exchange exchange = 1; // 交易所
}

// 列出交易所请求
message ListExchangesRequest {
  int32 page_size = 1; // 页码大小
  string page_token = 2; // 页码令牌
}

// 列出交易所响应
message ListExchangesResponse {
  repeated Exchange exchanges = 1; // 交易所
  string next_page_token = 2; // 下一个页码令牌
}
