syntax = "proto3";

package referencedata.v1;

import "google/protobuf/timestamp.proto";
import "referencedata/v1/error_reason.proto";

option go_package = "github.com/wyfcoding/financialtrading/go-api/referencedata/v1;v1";

service ReferenceDataService {
  rpc GetInstrument(GetInstrumentRequest) returns (GetInstrumentResponse) {};
  rpc ListInstruments(ListInstrumentsRequest) returns (ListInstrumentsResponse) {};
  
  // Handler implied RPCs
  rpc GetSymbol(GetSymbolRequest) returns (GetSymbolResponse) {};
  rpc ListSymbols(ListSymbolsRequest) returns (ListSymbolsResponse) {};
  rpc GetExchange(GetExchangeRequest) returns (GetExchangeResponse) {};
  rpc ListExchanges(ListExchangesRequest) returns (ListExchangesResponse) {};
}

enum InstrumentType {
  INSTRUMENT_TYPE_UNSPECIFIED = 0;
  SPOT = 1;
  FUTURE = 2;
  OPTION = 3;
}

message Instrument {
  string symbol = 1;
  string base_currency = 2;
  string quote_currency = 3;
  double tick_size = 4;
  double lot_size = 5;
  InstrumentType type = 6;
  int32 max_leverage = 7;
}

message GetInstrumentRequest {
  string symbol = 1;
}

message GetInstrumentResponse {
  Instrument instrument = 1;
}

message ListInstrumentsRequest {
}

message ListInstrumentsResponse {
  repeated Instrument instruments = 1;
}

// Handler matched definitions

message Symbol {
  string id = 1;
  string symbol_code = 2;
  string base_currency = 3;
  string quote_currency = 4;
  string exchange_id = 5;
  string status = 6;
  double min_order_size = 7;
  double price_precision = 8;
  google.protobuf.Timestamp created_at = 9;
  google.protobuf.Timestamp updated_at = 10;
}

message GetSymbolRequest {
  string id = 1;
  string symbol_code = 2;
}

message GetSymbolResponse {
  Symbol symbol = 1;
}

message ListSymbolsRequest {
  string exchange_id = 1;
  string status = 2;
  int32 page_size = 3;
  string page_token = 4;
}

message ListSymbolsResponse {
  repeated Symbol symbols = 1;
}

message Exchange {
  string id = 1;
  string name = 2;
  string country = 3;
  string timezone = 4;
  string status = 5;
  google.protobuf.Timestamp created_at = 6;
  google.protobuf.Timestamp updated_at = 7;
}

message GetExchangeRequest {
  string id = 1;
  string name = 2;
}

message GetExchangeResponse {
  Exchange exchange = 1;
}

message ListExchangesRequest {
  int32 page_size = 1;
  string page_token = 2;
}

message ListExchangesResponse {
  repeated Exchange exchanges = 1;
}
